# JobPilot

./: .agent-log  .dockerignore  .env.example  .gitignore  .npmrc  .session-id  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FEATURE-IDEAS.md  NOTICE  README.md  README.zh-CN.md  README_CN.md  SECURITY.md  blog-zh-2.md  blog-zh.md  compose.yml  docker_run_local.sh  drizzle-pg.config.ts  drizzle.config.ts  electron-builder.yml  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  webdav-sync-pitfalls.md
.github/: PULL_REQUEST_TEMPLATE.md
.trellis/: .gitignore  .template-hashes.json  workflow.md  worktree.yaml
desktop/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/entitlements/: macOS.entitlements
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: desktop-core.toml
desktop/src-tauri/src/: ai.rs  domain.rs  importer.rs  legacy_import_contract.rs  lib.rs  main.rs  release.rs  settings.rs  storage.rs  sync.rs  workspace.rs
docs/: GETTING_STARTED.md  MARKETING.md  browser-pdf-export-pitfalls-note.md  pdf-export-dev-issue.md  template-quality-matrix-plan.md  template-unified-renderer-migration-guide.md
electron/: main.mjs  preload.mjs
messages/: en.json  zh.json
scripts/: batch-export.sh  build-export-css.ts  build-local-updater-feed.mjs  build-release-updater-manifest.mjs  build-tauri-desktop.mjs  dev-local.mjs  (+8 more)
(+485 files in other folders)
