[package]
name = "rolerover-desktop"
version = "1.1.2"
description = "Tauri bootstrap shell for the RoleRover desktop rewrite"
authors = ["RoleRover"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "rolerover_desktop_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-updater = "2.0.0-rc.4"
uuid = { version = "1.18.1", features = ["v4"] }
pdf-extract = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = "3"

